unpackaged/main/default/objects/QS_Test_Scenario__c/fields/Ignore_UAT_2__c.field-meta.xml
<CustomField>
    <fullName>Ignore_UAT_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore UAT 2</label>
    <type>Checkbox</type>
</CustomField>