unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Additional_Testers__c.field-meta.xml
<CustomField>
    <fullName>QS_Additional_Testers__c</fullName>
    <label>Additional Testers</label>
    <type>TextArea</type>
</CustomField>