unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Area__c.field-meta.xml
<CustomField>
    <fullName>QS_Area__c</fullName>
    <formula>TEXT (QS_Requirement__r.QS_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>