unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>QS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Test_Scenarios1</relationshipName>
    <type>Lookup</type>
</CustomField>