unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Business_Owner__c</fullName>
    <description>Business Owner</description>
    <formula>HYPERLINK(QS_Requirement__r.QS_Business_Owner__c, QS_Requirement__r.QS_Business_Owner__r.FirstName &amp; &quot; &quot; &amp; QS_Requirement__r.QS_Business_Owner__r.LastName)</formula>
    <inlineHelpText>Business Owner</inlineHelpText>
    <label>Business Owner</label>
    <type>Text</type>
</CustomField>