unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Current_UAT_Cycle__c.field-meta.xml
<CustomField>
    <fullName>QS_Current_UAT_Cycle__c</fullName>
    <inlineHelpText>Indicates the Current UAT cycle. Populated when test results are being created and information is obtained from the latest test result record.</inlineHelpText>
    <label>Current UAT Cycle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>