unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>QS_Expected_Result__c</fullName>
    <inlineHelpText>Outcome expected if test is successful. Example: a new article will be linked to the case</inlineHelpText>
    <label>Expected Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>