unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Last_Defect_Resolution_Days__c.field-meta.xml
<CustomField>
    <fullName>QS_Last_Defect_Resolution_Days__c</fullName>
    <label>Last Defect Resolution Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>