unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Last_Ready_for_Retest_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Last_Ready_for_Retest_Date__c</fullName>
    <label>Last Ready for Retest Date</label>
    <type>DateTime</type>
</CustomField>