unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Pre_condition__c.field-meta.xml
<CustomField>
    <fullName>QS_Pre_condition__c</fullName>
    <inlineHelpText>Pre-condition that must be met before the Test Scenario can be completed. Examples include an opportunity must be marked Closed-Won prior to integrating to a sales order, or is a specific access level required.</inlineHelpText>
    <label>Pre-condition</label>
    <type>TextArea</type>
</CustomField>