unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>QS_Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customizable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>