unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Ready_for_Testing_date__c.field-meta.xml
<CustomField>
    <fullName>QS_Ready_for_Testing_date__c</fullName>
    <label>Ready for Testing date</label>
    <type>DateTime</type>
</CustomField>