unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Requirement__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>QS_Requirements__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>QS_Test_Scenarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>