unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Requirement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_External_Id__c</fullName>
    <formula>QS_Requirement__r.QS_Requirement_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement External Id</label>
    <type>Text</type>
</CustomField>