unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Requirement_Status__c</fullName>
    <formula>TEXT( QS_Requirement__r.QS_Requirement_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Status</label>
    <type>Text</type>
</CustomField>