unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Scenario__c.field-meta.xml
<CustomField>
    <fullName>QS_Scenario__c</fullName>
    <inlineHelpText>Make scenarios small enough to perform in 20 minutes or less. Use complete and standard formats including: Title, Preconditions &amp; Steps. Break longer scenarios into multiple components.</inlineHelpText>
    <label>Scenario</label>
    <type>TextArea</type>
</CustomField>