unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>