unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>