unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Tested</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Not Tested</label>
            </value>
            <value>
                <fullName>Passed</fullName>
                <color>#78C953</color>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#CC0000</color>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Retest</fullName>
                <color>#FFCC33</color>
                <label>Retest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>