unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Status_img__c.field-meta.xml
<CustomField>
    <fullName>QS_Status_img__c</fullName>
    <description>Color coded representation of the Test Scenario&#39;s Status
Red = failed, Yellow = Not Tested or Retest, Green = Passed</description>
    <formula>IF(
text(QS_Status__c) = &quot;Passed&quot;,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30) + &quot; Green&quot;,
IF(
text(QS_Status__c) = &quot;Not Tested&quot;,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30) + &quot; Yellow&quot;,
IF(
text(QS_Status__c) = &quot;Failed&quot; ,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30) + &quot; Red&quot;,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30) + &quot; Yellow&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Color coded representation of the Test Scenario&#39;s Status
Red = failed, Yellow = Not Tested or Retest, Green = Passed</inlineHelpText>
    <label>Status (img)</label>
    <type>Text</type>
</CustomField>