unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Test_Case_Action__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Case_Action__c</fullName>
    <inlineHelpText>A list of tasks to perform to complete the test scenario.</inlineHelpText>
    <label>Test Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>