unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Test_Results_Count__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Results_Count__c</fullName>
    <inlineHelpText>The number of test results that have been created.</inlineHelpText>
    <label>Test Results Count</label>
    <summaryForeignKey>QS_Test_Result__c.QS_Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>