unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Test_Scenario_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Scenario_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Test Scenario External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>