unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Test_Scenario_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Scenario_Status__c</fullName>
    <formula>if( QS_Total_Test_Results__c = 0 , &quot;Not Tested&quot;,
if(QS_Total_Ready_for_Retest__c &gt; 0, &quot;Retest&quot;,
if(QS_Total_Failed__c &gt;0, &quot;Failed&quot;,
&quot;Passed&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Formula)</label>
    <type>Text</type>
</CustomField>