unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Testing_Readiness__c.field-meta.xml
<CustomField>
    <fullName>QS_Testing_Readiness__c</fullName>
    <inlineHelpText>This field will be changed by the developer.</inlineHelpText>
    <label>Testing Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>