unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Testing_Suggestions_Variations__c.field-meta.xml
<CustomField>
    <fullName>QS_Testing_Suggestions_Variations__c</fullName>
    <inlineHelpText>List variants to the test scenario that should generate their own test result. Use this field to increase the breadth of the scenario and account for non-standard situations.</inlineHelpText>
    <label>Testing Suggestions/Variations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>