unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Total_Passed__c.field-meta.xml
<CustomField>
    <fullName>QS_Total_Passed__c</fullName>
    <description>Total number of Test Results with a &quot;Passed&quot;  or &quot;Passed with Exception&quot; status</description>
    <inlineHelpText>Total number of Test Results with a &quot;Passed&quot;  or &quot;Passed with Exception&quot; status</inlineHelpText>
    <label>Total Passed</label>
    <summaryFilterItems>
        <field>QS_Test_Result__c.QS_Test_Result_Status__c</field>
        <operation>equals</operation>
        <value>Passed, &quot;Passed, with exception&quot;</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Test_Result__c.CreatedDate</field>
        <operation>greaterOrEqual</operation>
        <value>3/6/2022, 12:00 AM</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Test_Result__c.QS_Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>