unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Total_Ready_for_Retest__c.field-meta.xml
<CustomField>
    <fullName>QS_Total_Ready_for_Retest__c</fullName>
    <description>Total number of Test Results where &quot;Ready for Retest&quot; = true</description>
    <inlineHelpText>Total number of Test Results where &quot;Ready for Retest&quot; is checked</inlineHelpText>
    <label>Total &quot;Ready for Retest&quot;</label>
    <summaryFilterItems>
        <field>QS_Test_Result__c.QS_Ready_for_Retest__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Test_Result__c.QS_Has_been_retested__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Test_Result__c.QS_Test_Result_Status__c</field>
        <operation>equals</operation>
        <value>Blocked, Failed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Test_Result__c.CreatedDate</field>
        <operation>greaterOrEqual</operation>
        <value>3/6/2022, 12:00 AM</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Test_Result__c.QS_Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>