unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>QS_Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>