unpackaged/main/default/objects/QS_Test_Scenario__c/fields/QS_Verification_User__c.field-meta.xml
<CustomField>
    <fullName>QS_Verification_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>