unpackaged/main/default/objects/QS_Test_Scenario__c/fields/REQ_Dev_Cycle__c.field-meta.xml
<CustomField>
    <fullName>REQ_Dev_Cycle__c</fullName>
    <formula>TEXT (QS_Requirement__r.QS_Development_Sprint__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REQ Dev Cycle</label>
    <type>Text</type>
</CustomField>