unpackaged/main/default/objects/QS_Test_Scenario__c/fields/Testing_Group__c.field-meta.xml
<CustomField>
    <fullName>Testing_Group__c</fullName>
    <label>Testing Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business_All</fullName>
                <label>Business - All</label>
            </value>
            <value>
                <fullName>Business - Detail</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
                <label>Ignore Forever</label>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>