unpackaged/main/default/objects/QS_Test_Scenario__c/recordTypes/UAT_Test_Scenario.recordType-meta.xml
<RecordType>
    <fullName>UAT_Test_Scenario</fullName>
    <active>true</active>
    <label>UAT Test Scenario</label>
</RecordType>