unpackaged/main/default/objects/QS_Test_Scenario__c/listViews/Data_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>Data_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>QS_Scenario__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Requirement__c</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>Data</value>
    </filters>
    <label>Data Test Scenarios</label>
</ListView>