unpackaged/main/default/objects/QS_Test_Scenario__c/listViews/Engineering_R_D_Test_Results.listView-meta.xml
<ListView>
    <fullName>Engineering_R_D_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>QS_Scenario__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_Requirement__c</columns>
    <columns>QS_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>Engineering / R&amp;D</value>
    </filters>
    <label>Engineering/R&amp;D Test Results</label>
</ListView>