unpackaged/main/default/objects/QS_Test_Scenario__c/listViews/Professional_Services_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>Professional_Services_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>QS_Scenario__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Requirement__c</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Track__c</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </filters>
    <label>Professional Services Test Scenarios</label>
</ListView>