unpackaged/main/default/objects/QS_Test_Scenario__c/listViews/Test_Scenarios_Update_Not_Tested.listView-meta.xml
<ListView>
    <fullName>Test_Scenarios_Update_Not_Tested</fullName>
    <columns>NAME</columns>
    <columns>QS_Scenario__c</columns>
    <columns>QS_Status__c</columns>
    <columns>QS_Requirement__c</columns>
    <columns>QS_Track__c</columns>
    <columns>QS_Assigned_To__c</columns>
    <columns>QS_Testing_Readiness__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Not Tested</value>
    </filters>
    <filters>
        <field>QS_Track__c</field>
        <operation>notEqual</operation>
        <value>Finance</value>
    </filters>
    <filters>
        <field>QS_Assigned_To__c</field>
        <operation>contains</operation>
        <value>Edmee Kelsey,Dave Roberts,Sandro De Ciccio,Martin Doversten,Jeremy Baxter,Kristoffer Lager,James Resetco,Robert Johnson,Rebecca Lam,Daniel Mejia,Julia Sangchoolie,Marielle Chabot,Byron Cartago,Serafin Orillan,Lourdes Andreu,R-Jay Mendoza</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QS_Test_Scenario__c.UAT_Test_Scenario</value>
    </filters>
    <filters>
        <field>Testing_Group__c</field>
        <operation>notEqual</operation>
        <value>Ignore</value>
    </filters>
    <label>Test Scenarios - Update Not Tested</label>
</ListView>